--- a/QR_Code.html
+++ b/QR_Code.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="QR_Code.css" />
+      <link rel="stylesheet" href="QR_Code_1.css" />
       <title>QR Code</title>
    </head>
    <body>
